--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -2,227 +2,310 @@
 @import url("https://fonts.googleapis.com/css2?family=Poppins:wght@400;500;600&display=swap");
 /*=============== VARIABLES CSS ===============*/
 :root {
-  --header-height: 3rem;
-  /*========== Colors ==========*/
-  --hue-color: 206;
-  --black-color: hsl(var(--hue-color), 4%, 4%);
-  --black-color-alt: hsl(var(--hue-color), 4%, 8%);
-  --title-color: hsl(var(--hue-color), 4%, 95%);
-  --text-color: hsl(var(--hue-color), 4%, 75%);
-  --text-color-light: hsl(var(--hue-color), 4%, 65%);
-  --white-color: #fff;
-  --body-color: hsl(var(--hue-color), 4%, 6%);
-  --container-color: hsl(var(--hue-color), 4%, 10%);
-  --text-gradient: linear-gradient(
-    hsl(var(--hue-color), 4%, 24%),
-    hsl(var(--hue-color), 4%, 8%)
-  );
-  --scroll-thumb-color: hsl(var(--hue-color), 4%, 16%);
-  --scroll-thumb-color-alt: hsl(var(--hue-color), 4%, 20%);
-  /*========== Font and typography ==========*/
-  --body-font: "Poppins", sans-serif;
-  --biggest-font-size: 5rem;
-  --bigger-font-size: 3.5rem;
-  --big-font-size: 2.5rem;
-  --h2-font-size: 1.25rem;
-  --h3-font-size: 1.125rem;
-  --normal-font-size: 0.938rem;
-  --small-font-size: 0.813rem;
-  --smaller-font-size: 0.75rem;
-  --text-line-height: 2rem;
-  /*========== Font weight ==========*/
-  --font-medium: 500;
-  --font-semi-bold: 600;
-  /*========== Margenes Bottom ==========*/
-  --mb-0-5: 0.5rem;
-  --mb-0-75: 0.75rem;
-  --mb-1: 1rem;
-  --mb-1-5: 1.5rem;
-  --mb-2: 2rem;
-  --mb-2-5: 2.5rem;
-  /*========== z index ==========*/
-  --z-tooltip: 10;
-  --z-fixed: 100;
+	--header-height: 3rem;
+	/*========== Colors ==========*/
+	--hue-color: 206;
+	--black-color: hsl(var(--hue-color), 4%, 4%);
+	--black-color-alt: hsl(var(--hue-color), 4%, 8%);
+	--title-color: hsl(var(--hue-color), 4%, 95%);
+	--text-color: hsl(var(--hue-color), 4%, 75%);
+	--text-color-light: hsl(var(--hue-color), 4%, 65%);
+	--white-color: #fff;
+	--body-color: hsl(var(--hue-color), 4%, 6%);
+	--container-color: hsl(var(--hue-color), 4%, 10%);
+	--text-gradient: linear-gradient(
+		hsl(var(--hue-color), 4%, 24%),
+		hsl(var(--hue-color), 4%, 8%)
+	);
+	--scroll-thumb-color: hsl(var(--hue-color), 4%, 16%);
+	--scroll-thumb-color-alt: hsl(var(--hue-color), 4%, 20%);
+	/*========== Font and typography ==========*/
+	--body-font: "Poppins", sans-serif;
+	--biggest-font-size: 5rem;
+	--bigger-font-size: 3.5rem;
+	--big-font-size: 2.5rem;
+	--h2-font-size: 1.25rem;
+	--h3-font-size: 1.125rem;
+	--normal-font-size: 0.938rem;
+	--small-font-size: 0.813rem;
+	--smaller-font-size: 0.75rem;
+	--text-line-height: 2rem;
+	/*========== Font weight ==========*/
+	--font-medium: 500;
+	--font-semi-bold: 600;
+	/*========== Margenes Bottom ==========*/
+	--mb-0-5: 0.5rem;
+	--mb-0-75: 0.75rem;
+	--mb-1: 1rem;
+	--mb-1-5: 1.5rem;
+	--mb-2: 2rem;
+	--mb-2-5: 2.5rem;
+	/*========== z index ==========*/
+	--z-tooltip: 10;
+	--z-fixed: 100;
 }
 
 @media screen and (min-width: 968px) {
-  :root {
-    --biggest-font-size: 7.5rem;
-    --bigger-font-size: 4.5rem;
-    --big-font-size: 4rem;
-    --h2-font-size: 1.5rem;
-    --h3-font-size: 1.25rem;
-    --normal-font-size: 1rem;
-    --small-font-size: 0.875rem;
-    --smaller-font-size: 0.813rem;
-  }
+	:root {
+		--biggest-font-size: 7.5rem;
+		--bigger-font-size: 4.5rem;
+		--big-font-size: 4rem;
+		--h2-font-size: 1.5rem;
+		--h3-font-size: 1.25rem;
+		--normal-font-size: 1rem;
+		--small-font-size: 0.875rem;
+		--smaller-font-size: 0.813rem;
+	}
 }
 
 /*=============== BASE ===============*/
 * {
-  box-sizing: border-box;
-  padding: 0;
-  margin: 0;
+	box-sizing: border-box;
+	padding: 0;
+	margin: 0;
 }
 
 html {
-  scroll-behavior: smooth;
+	scroll-behavior: smooth;
 }
 
 body {
-  margin: var(--header-height) 0 0 0;
-  font-family: var(--body-font);
-  font-size: var(--normal-font-size);
-  background-color: var(--body-color);
-  color: var(--text-color);
+	margin: var(--header-height) 0 0 0;
+	font-family: var(--body-font);
+	font-size: var(--normal-font-size);
+	background-color: var(--body-color);
+	color: var(--text-color);
 }
 
 h1,
 h2,
 h3 {
-  color: var(--title-color);
+	color: var(--title-color);
 }
 
 ul {
-  list-style: none;
+	list-style: none;
 }
 
 a {
-  text-decoration: none;
+	text-decoration: none;
 }
 
 button,
 input {
-  border: none;
-  outline: none;
+	border: none;
+	outline: none;
 }
 
 button {
-  cursor: pointer;
+	cursor: pointer;
 }
 
 img {
-  max-width: 100%;
-  height: auto;
+	max-width: 100%;
+	height: auto;
 }
 
 /*=============== REUSABLE CSS CLASSES ===============*/
 .section {
-  padding: 4rem 0 2rem;
+	padding: 4rem 0 2rem;
 }
 
 .section__title {
-  font-size: var(--bigger-font-size);
-  text-align: center;
-  margin-bottom: var(--mb-2-5);
+	font-size: var(--bigger-font-size);
+	text-align: center;
+	margin-bottom: var(--mb-2-5);
 }
 
 .section__title-gradient {
-  background: var(--text-gradient);
-  color: transparent;
-  -webkit-background-clip: text;
-  background-clip: text;
+	background: var(--text-gradient);
+	color: transparent;
+	-webkit-background-clip: text;
+	background-clip: text;
 }
 
 .marquee__title {
-  background: var(--text-gradient);
-  color: transparent;
-  -webkit-background-clip: text;
-  background-clip: text;
+	background: var(--text-gradient);
+	color: transparent;
+	-webkit-background-clip: text;
+	background-clip: text;
 }
 
 /*=============== LAYOUT ===============*/
 .main {
-  overflow: hidden;
+	overflow: hidden;
 }
 
 .container {
-  max-width: 968px;
-  margin-left: var(--mb-1-5);
-  margin-right: var(--mb-1-5);
+	max-width: 968px;
+	margin-left: var(--mb-1-5);
+	margin-right: var(--mb-1-5);
 }
 
 .grid {
-  display: grid;
+	display: grid;
 }
 
 /* ============== HEADER ============ */
 .header {
-  position: fixed;
-  width: 100%;
-  top: 0;
-  left: 0;
-  z-index: var(--z-fixed);
+	position: fixed;
+	width: 100%;
+	top: 0;
+	left: 0;
+	z-index: var(--z-fixed);
 }
 
 .nav {
-  display: flex;
-  height: var(--header-height);
-  justify-content: space-between;
-  align-items: center;
+	display: flex;
+	height: var(--header-height);
+	justify-content: space-between;
+	align-items: center;
 }
 
 .nav__logo {
-  display: flex;
-  justify-content: center;
-  color: var(--white-color);
-  gap: 0.5rem;
+	display: flex;
+	justify-content: center;
+	color: var(--white-color);
+	gap: 0.5rem;
 }
 
 .nav__logo img {
-  width: 1.5rem;
+	width: 1.5rem;
 }
 
 @media screen and (max-width: 768px) {
-  .nav__menu {
-    position: fixed;
-    width: 100%;
-    top: -100%;
-    left: 0;
-    background-color: var(--body-color);
-    padding: 4rem 0 2rem;
-    transition: 0.6s;
-  }
+	.nav__menu {
+		position: fixed;
+		width: 100%;
+		top: -100%;
+		left: 0;
+		background-color: var(--body-color);
+		padding: 4rem 0 2rem;
+		transition: 0.6s;
+	}
 }
 
 .nav__list {
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  gap: 2rem;
+	display: flex;
+	flex-direction: column;
+	align-items: center;
+	gap: 2rem;
 }
 
 .nav__link {
-  color: var(--white-color);
-  font-size: var(--h2-font-size);
-  text-transform: uppercase;
-  font-weight: var(--font-semi-bold);
-  background: var(--text-gradient);
-  color: transparent;
-  -webkit-background-clip: text;
-  background-clip: text;
-  transition: 0.4s;
+	color: var(--white-color);
+	font-size: var(--h2-font-size);
+	text-transform: uppercase;
+	font-weight: var(--font-semi-bold);
+	background: var(--text-gradient);
+	color: transparent;
+	-webkit-background-clip: text;
+	background-clip: text;
+	transition: 0.4s;
 }
 
 .nav__link:hover {
-  color: var(--white-color);
+	color: var(--white-color);
 }
 
 .active-link {
-  color: var(--white-color);
+	color: var(--white-color);
 }
 
 .nav__close {
-  position: absolute;
-  top: 1rem;
-  right: 1rem;
+	position: absolute;
+	top: 1rem;
+	right: 1rem;
 }
 
 .nav__close i {
-  font-size: 1.5rem;
+	font-size: 1.5rem;
 }
 
 /* ===== Show Menu ===== */
 .show-menu {
-  top: 0;
+	top: 0;
+}
+
+/* ========== HOME ========== */
+.home__img {
+	width: 250px;
+	position: absolute;
+	top: -16rem;
+	right: 3rem;
+}
+
+.home__data {
+	padding-top: 6rem;
+}
+
+.home__header {
+	position: relative;
+}
+
+.home__title {
+	font-size: var(--biggest-font-size);
+	position: absolute;
+	line-height: 6rem;
+	top: -4rem;
+	left: 1rem;
+	background: var(--text-gradient);
+	-webkit-background-clip: text;
+	background-clip: text;
+	color: transparent;
+}
+
+.home__subtitle {
+	font-size: var(--big-font-size);
+	margin-bottom: var(--mb-2-5);
+}
+
+.home__title-description {
+	font-size: var(--h3-font-size);
+	font-weight: var(--font-medium);
+	margin-bottom: var(--mb-1);
+}
+
+.home__description {
+	margin-bottom: var(--mb-2-5);
+	line-height: var(--text-line-height);
+}
+
+.home__price {
+	font-size: var(--h3-font-size);
+	font-weight: var(--font-semi-bold);
+	margin-left: var(--mb-0-75);
+}
+
+/* =============== BUTTONS ============= */
+.button {
+	display: inline-block;
+	background-color: var(--black-color);
+	color: var(--white-color);
+	padding: 1rem 1.25rem;
+}
+
+.button:hover {
+	background-color: var(--black-color-alt);
+}
+
+.button__icon {
+	font-size: 1.2rem;
+}
+
+.button--flex {
+	display: inline-flex;
+	align-items: center;
+	gap: 0.75rem;
+}
+
+/* ============ SPONSOR =========== */
+.sponsor__img {
+	width: 90px;
+}
+
+.sponsor__container {
+	grid-template-columns: repeat(2, max-content);
+	gap: 4rem;
+	place-content: center;
 }
